@@ -1,6 +1,6 @@
-tls_ca_file:		/usr/local/news/lib/ca.cert
-tls_ca_path:		/usr/local/news/lib/cas
+tls_ca_file:		/usr/local/news/etc/ca.cert
+tls_ca_path:		/usr/local/news/etc/cas
 
 # Our local certificate.
-tls_cert_file:		/usr/local/news/lib/our.cert
-tls_key_file:		/usr/local/news/lib/our.key
+tls_cert_file:		/usr/local/news/etc/our.cert
+tls_key_file:		/usr/local/news/etc/our.key
